fixed letter-spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,8 @@ body {
     font-family: $font;
     counter-reset: sidenote-counter;
     color: $textColor; 
+
+    letter-spacing: 0.2px;
     
     #overlay {
         width: 100%;
@@ -79,7 +81,7 @@ body {
         width: 100%;
         display: flex;
         flex-direction: row;
-        border-bottom: 1px solid #ebebeb;
+        border-bottom: 1px solid lightgray;
         box-shadow: 0 0px 1px rgba(0,0,0,0.2);
         margin-bottom: 1rem;
         background-color: $lightGreen;
